# rap-generator-app

./: LICENSE  README.md  char2idx.json  idx2char.txt  main.py  ml_util.py  pyproject.toml
